# pm-bin

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  crates-publish.yml  publish-crates.yml
example/hello/: Cargo.toml  build.rs
example/hello/src/: main.rs
src/: build.rs  cli.rs  lib.rs
src/build_src/: pm_bin.rs
