[package]
name = "pm-bin"
version = "0.1.1"
edition = "2024"
license = "MIT"

authors = ["secext2022 <secext2022@outlook.com>"]
description = "Util for rust CLI program"
repository = "https://github.com/fm-elpac/pm-bin"
keywords = ["cli", "util"]
categories = ["command-line-interface", "development-tools::build-utils"]

[dependencies]
log = "^0.4.27"
env_logger = "^0.11.8"

built = { version = "^0.8.0", optional = true }
vergen-gitcl = { version = "^1.0.8", features = ["build"], optional = true }

[features]
default = []
build = ["built", "vergen-gitcl"]
