[package]
name = "pm-bin"
version = "0.2.0"
edition = "2024"
license = "MIT"

authors = ["secext2022 <secext2022@outlook.com>"]
description = "Util for rust CLI program"
repository = "https://github.com/fm-elpac/pm-bin"
keywords = ["cli", "util"]
categories = ["command-line-interface", "development-tools::build-utils"]

[dependencies]
log = "^0.4.29"
env_logger = "^0.11.10"

built = { version = "^0.8.0", optional = true }
vergen-gitcl = { version = "^9.1.0", features = ["build"], optional = true }

[features]
default = []
build = ["built", "vergen-gitcl"]
src = []
