[package]
name = "pm-bin"
version = "0.2.1"
edition = "2024"
license = "MIT"

authors = ["secext2022 <secext2022@outlook.com>"]
description = "Util for rust CLI program"
repository = "https://github.com/fm-elpac/pm-bin"
keywords = ["cli", "util"]
categories = ["command-line-interface", "development-tools::build-utils"]

[dependencies]
log = "^0.4.33"
env_logger = "^0.11.11"

built = { version = "^0.8.1", optional = true }
vergen-gitcl = { version = "^10.0.1", features = ["build"], optional = true }

[features]
default = []
build = ["built", "vergen-gitcl"]
src = []
